added limited set profile commands

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@
 DISCORD_TOKEN=YOUR_DISCORD_TOKEN_HERE
 DISCORD_CLIENT_ID=YOUR_DISCORD_CLIENT_ID_HERE
 DISCORD_GUILD_ID=YOUR_DISCORD_GUILD_ID_HERE
+
+# Postgres
+DB_URL=postgres://postgres:password@localhost:5432/postgres
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=password
+DB_HOST=localhost
+DB_PORT=5432
